apaguei a sessão demo

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,12 +4,7 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Demo"
-  url = "#hero"
-  weight = 10
-
-[[main]]
-  name = "Posts"
+  name = "Rticular"
   url = "#posts"
   weight = 20
 
