--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -8,13 +8,13 @@
   # contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
 
 # Uncomment the lines below to configure your website in a second language.
-[pt]
- languageCode = "pt-br"
-  contentDir = "content/pt"
-  title = "Allan Alvarenga"
-  [pt.params]
-    description = "Descrição em português"
-  [[pt.menu.main]]
-    name = "Pt-br"
-    url = "#about"
-   weight = 1
+#[pt]
+ #languageCode = "pt-br"
+  #contentDir = "content/pt"
+  #title = "Allan Alvarenga"
+  #[pt.params]
+    #description = "Descrição em português"
+  #[[pt.menu.main]]
+   # name = "Pt-br"
+    #url = "#about"
+   #weight = 1
